--- a/.babelrc
+++ b/.babelrc
@@ -1,23 +1,25 @@
 {
-	"presets": [
-		"react",
-		["env", {
-			"targets": {
-				"browsers": "last 2 versions"
-			},
-			"loose": true,
-			"modules": false
-		}]
-	],
+  "presets": [
+    "react",
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": "last 2 versions"
+        },
+        "loose": true,
+        "modules": false
+      }
+    ]
+  ],
   "plugins": [
     "react-hot-loader/babel",
-    "transform-class-properties"
+    "transform-class-properties",
+    ["lodash", { "id": ["lodash", "semantic-ui-react"] }]
   ],
   "env": {
     "test": {
-      "plugins": [
-        "transform-es2015-modules-commonjs"
-      ]
+      "plugins": ["transform-es2015-modules-commonjs"]
     }
   }
 }
